# DMD-Allocatetd

./: AUDIT_CHECKLIST.md  Anchor.toml  Cargo.toml  FINAL_STATUS.md  LICENSE  LICSENCE  README.md  index.html  metadata.dmd2.json  metadata.json  policy.html
.well-known/: security.txt
idl/: dmd_anchor.json
programs/dmd_anchor/: Cargo.toml
programs/dmd_anchor/src/: lib.rs
public/.well-known/: security.txt
